--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
     /* colors */
     --White: #fff;
     --Black: #000;
+    --White-smoke-200: #ddd;
+    --sky-blue: #456ed6;
     /* fonts */
     --font-family-Ubuntu: "Ubuntu", sans-serif;
     --font-weight-400: 400;
