--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
     --Black: #000;
     --White-smoke-200: #ddd;
     --sky-blue: #456ed6;
+    --blue: #1f3e97;
     --Dark-Grey---Fashion: #323232;
     /* fonts */
     --font-family-Ubuntu: "Ubuntu", sans-serif;
