--- a/src/components/LandingPage/CollectionSections/collectionSection.css
+++ b/src/components/LandingPage/CollectionSections/collectionSection.css
@@ -2,16 +2,16 @@
   color: var(--Dark-Grey---Fashion, #323232);
   text-align: center;
   font-size: 50px;
-  font-style: normal;
-  font-weight: 700;
+  font-style: var(--font-style-normal);
+  font-weight: var(--font-weight-700);
   line-height: normal;
 }
 .MenCollections-wrapper p {
   color: var(--Dark-Grey---Fashion, #323232);
   text-align: center;
   font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
+  font-style: var(--font-style-normal);
+  font-weight: var(--font-weight-400);
   line-height: normal;
   margin-top: 20px;
   margin-bottom: 65px;
@@ -95,7 +95,7 @@
   align-items: center;
 }
 .gridIcons span:nth-of-type(2) {
-  color: #456ed6;
+  color: var(--sky-blue);
   font-family: Inter;
   font-size: 19.444px;
   font-style: normal;
@@ -111,7 +111,7 @@
 
   border-radius: 38.889px;
   border: 0.972px solid #d9d9d9;
-  background: #1f3e97;
+  background: var(--blue);
   box-shadow: 0px 3.889px 27.222px 0px rgba(70, 70, 70, 0.4);
 }
 .btn a {
