--- a/src/components/ShopPage/Products/ProductList.css
+++ b/src/components/ShopPage/Products/ProductList.css
@@ -1,23 +1,34 @@
-/* styles.css */
+.product-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.category {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
 .products {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.product-card {
+  width: calc(25% - 20px); /* 4 cards per row by default */
+  margin-bottom: 20px;
+  /* Adjust styling as needed for individual cards */
+}
+
+@media screen and (max-width: 1024px) {
+  .product-card {
+    width: calc(50% - 20px); /* 2 cards per row on tablets */
   }
-  
-  .product {
-    border: 1px solid #ccc;
-    padding: 10px;
-    width: 200px;
-    text-align: center;
+}
+
+@media screen and (max-width: 600px) {
+  .product-card {
+    width: calc(100% - 20px); /* 1 card per row on mobile */
   }
-  
-  .product img {
-    width: 100%;
-    height: auto;
-  }
-  
-  h2 {
-    margin-top: 20px;
-  }
-  
+}
