--- a/src/components/ShopPage/Products/ProductList.css
+++ b/src/components/ShopPage/Products/ProductList.css
@@ -1,26 +1,132 @@
+
+.category {
+  width: 100%;
+  padding: 72px 32px;
+}
+.category  h2{
+  color: var(--Dark-Grey---Fashion, #323232);
+  text-align: center;
+  font-size: 50px;
+  font-style: var(--font-style-normal);
+  font-weight: var(--font-weight-700);
+  line-height: normal;
+}
+.category  .sub-title{
+  color: var(--Dark-Grey---Fashion, #323232);
+  text-align: center;
+  font-size: 20px;
+  font-style: var(--font-style-normal);
+  font-weight: var(--font-weight-400);
+  line-height: normal;
+  margin-top: 20px;
+  margin-bottom: 65px;
+  opacity: 0.5;
+}
 .product-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-}
-
-.category {
-  width: 100%;
-  margin-bottom: 20px;
-}
-
-.products {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  /* padding: 3px 30px 3px 0px; */
 }
 
 .product-card {
   width: calc(25% - 20px); /* 4 cards per row by default */
   margin-bottom: 20px;
+  text-decoration: none;
   /* Adjust styling as needed for individual cards */
 }
+.product-card .SampleImg{
+  width: 280px;
+  height: 270px;
+  margin-bottom: 21px;
+}
+.section-Feedback{
+  display: flex;
+  justify-content: space-between;
+  height: 23px;
+  flex-shrink: 0;
+  margin-bottom: 10px;
+}
+.section-Feedback p{
+  color: #323232;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  opacity: 0.5;
+}
+.section-Feedback img{
+  width: 95.79px;
+  height: 15px;
+  flex-shrink: 0;
+  padding-right: 22px;
+}
+.product-card h4{
+  color: var(--Dark-Grey---Fashion, #323232);
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin-bottom: 10px;
 
+}
+.Pricing {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.Pricing p{
+  color: #456ed6;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-right: 10px;
+}
+.Pricing del {
+  color: var(--Dark-Grey---Fashion, #323232);
+  font-family: Ubuntu;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  opacity: 0.3;
+  padding: 3px 3px 3px 0;
+}
+.btn-container {
+  display: flex;
+  justify-content: center;
+}
+.btn {
+  max-width: 300px;
+  padding: 15.556px 23.333px;
+  border-radius: 38.889px;
+  border: 0.972px solid #d9d9d9;
+  background: var(--blue);
+  box-shadow: 0px 3.889px 27.222px 0px rgba(70, 70, 70, 0.4);
+}
+.btn a {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  gap: 7.778px;
+  text-decoration: none;
+}
+.btn a:hover {
+  text-decoration: underline;
+}
+.btn span {
+  color: var(--White, #fff);
+  font-size: 15.556px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+.btn .ArrowDown {
+  width: 23.333px;
+  height: 23.333px;
+}
 @media screen and (max-width: 1024px) {
   .product-card {
     width: calc(50% - 20px); /* 2 cards per row on tablets */
