--- a/src/pages/LandingPage/LandingPage.css
+++ b/src/pages/LandingPage/LandingPage.css
@@ -1,10 +1,10 @@
 .Delivery-Collections-Testimonials {
-  display: flex;
+  /* display: flex; */
   /* height: 4806px; */
-  padding: 72px 32px;
+  /* padding: 72px 32px;
   flex-direction: column;
   align-items: flex-start;
   gap: 72px;
   flex-shrink: 0;
-  align-self: stretch;
+  align-self: stretch; */
 }
