--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,23 +3,22 @@ header {
   padding: 18px 32px;
   justify-content: space-between;
   align-items: center;
-  align-self: stretch;
   border-bottom: 1px solid var(--White-smoke-200, #ddd);
   background: var(--White, #fff);
 }
-header div img {
+header div:nth-of-type(1) img {
   width: 86px;
   height: 20px;
   flex-shrink: 0;
 }
-header nav {
+header div:nth-of-type(2), header div:nth-of-type(3) {
   display: flex;
   padding: 0px 21px;
   justify-content: center;
   align-items: center;
   gap: 10px;
 }
-header nav a {
+header div a {
   color: var(--sky-blue, #456ed6);
   font-size: 13px;
   font-style: var(--font-style-normal);
@@ -27,6 +26,6 @@ header nav a {
   line-height: 20px; /* 153.846% */
   text-decoration: none;
 }
-header nav a:hover {
+header div a:hover {
     text-decoration: underline;
   }
