--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,27 +5,29 @@ header {
   align-items: center;
   border-bottom: 1px solid var(--White-smoke-200, #ddd);
   background: var(--White, #fff);
+  width: 100%;
 }
-header div:nth-of-type(1) img {
+.logo img {
   width: 86px;
   height: 20px;
   flex-shrink: 0;
 }
-header div:nth-of-type(2), header div:nth-of-type(3) {
+header nav {
   display: flex;
-  padding: 0px 21px;
-  justify-content: center;
-  align-items: center;
   gap: 10px;
 }
-header div a {
+header nav a {
   color: var(--sky-blue, #456ed6);
-  font-size: 13px;
+  font-size: 14px;
   font-style: var(--font-style-normal);
   font-weight: var(--font-weight-500);
-  line-height: 20px; /* 153.846% */
+  line-height: 20px; 
   text-decoration: none;
 }
-header div a:hover {
+
+
+
+
+header nav a:hover, header nav a:active {
     text-decoration: underline;
   }
