--- a/src/components/LandingPage/DiscountSection/DiscountSection.css
+++ b/src/components/LandingPage/DiscountSection/DiscountSection.css
@@ -5,24 +5,35 @@
 .DiscountSection .discount {
   display: flex;
   flex-direction: row;
+  justify-content: space-evenly;
   gap: 29px;
-}
-.discount .girl,
-.discount .boy {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  border-radius: 20px;
-  height: 300px;
-  flex-shrink: 0;
-  max-width: 636px;
-  padding: 30px 49px;
+  flex-wrap: wrap;
 }
 .discount .girl {
   background: linear-gradient(135deg, var(--sky-blue) 0%, #32ccbc 100%);
 }
 .discount .boy {
   background: linear-gradient(135deg, #879dd6 0%, var(--sky-blue) 100%);
+}
+.discount .girl .discount-img img {
+  max-width: 235px;
+  height: 200px;
+  flex-shrink: 0;
+}
+.discount .girl,
+.discount .boy{
+  display: flex;
+  flex-direction: row;
+  border-radius: 20px;
+  padding: 30px 49px;
+  /* width: 636px; */
+  height: 300px;
+  align-items: center;
+}
+.discount .boy .discount-img img {
+  max-width: 250px;
+  height: 251px;
+  flex-shrink: 0;
 }
 .discount .girl .discount-text,
 .discount .boy .discount-text {
@@ -48,17 +59,6 @@
 .discount .boy .discount-text p span, .discount .girl .discount-text p span{
   color:  #FBD103;
 }
-.discount .girl .discount-img img {
-  max-width: 335px;
-  height: 300px;
-  flex-shrink: 0;
-}
-.discount .boy .discount-img img {
-  max-width: 350px;
-  height: 351px;
-  flex-shrink: 0;
-}
-
 .discount button {
   display: flex;
   width: 170.719px;
