--- a/src/components/LandingPage/HeroSection/HeroSection.css
+++ b/src/components/LandingPage/HeroSection/HeroSection.css
@@ -8,6 +8,7 @@
     url("../../../assets/HeroImg.png") lightgray 50% / cover no-repeat;
   display: flex;
   height: 712px;
+  width: 100%;
   padding: 64px;
   flex-direction: column;
   justify-content: flex-end;
@@ -18,7 +19,6 @@
 }
 /* styling for paragraphs in hero section */
 .hero-section p {
-  /* margin-bottom: 20px; */
   width: 632px;
   font-style: var(--font-style-normal);
   color: var(--White, #fff);
@@ -64,4 +64,70 @@
 .hero-section button a:hover,
 .hero-section button a:active {
   text-decoration: underline;
+}
+@media (max-width: 768px) {
+  .hero-section {
+    height: 374.784px;
+    padding: 53.248px 65.536px;
+  }
+  .hero-section p {
+    width: 297.47px;
+  }
+  .hero-section p:nth-of-type(1) {
+    line-height: 17.778px; /* 118.035% */
+    letter-spacing: 0.074px;
+    font-size: 15.062px;
+  }
+  .hero-section p:nth-of-type(2) {
+    line-height: 44.066px; /* 120.028% */
+    letter-spacing: 0.148px;
+    font-size: 36.713px;
+  }
+  .hero-section p:nth-of-type(3) {
+    line-height: 22.223px; /* 147.544% */
+    letter-spacing: 0.148px;
+    font-size: 15.062px;
+  }
+  .hero-section button {
+    padding: 7.531px 33.889px;
+    border-radius: 3.765px;
+    gap: 5.648px;
+    flex-shrink: 0;
+  }
+  .hero-section button a {
+    font-size: 11.296px;
+  }
+}
+@media (max-width: 452px) {
+  .hero-section {
+    height: 183px;
+    padding: 26px 32px;
+  }
+  .hero-section p {
+    width: 145.249px;
+  }
+  .hero-section p:nth-of-type(1) {
+    font-size: 7.354px;
+    line-height: 8.681px; /* 118.035% */
+    letter-spacing: 0.036px;
+  }
+  .hero-section p:nth-of-type(2) {
+    font-size: 17.926px;
+    line-height: 21.517px; /* 120.028% */
+    letter-spacing: 0.072px;
+  }
+  .hero-section p:nth-of-type(3) {
+    font-size: 7.354px;
+    line-height: 10.851px; /* 147.544% */
+    letter-spacing: 0.072px;
+  }
+  .hero-section button {
+    padding: 3.677px 16.547px;
+    border-radius: 1.839px;
+    gap: 2.758px;
+    flex-shrink: 0;
+  }
+  .hero-section button a {
+    font-size: 5.516px;
+  }
 }
