--- a/src/components/ShopPage/Products/ProductList.css
+++ b/src/components/ShopPage/Products/ProductList.css
@@ -30,13 +30,13 @@
 }
 
 .product-card {
+  max-width: 280px;
   width: calc(25% - 20px); /* 4 cards per row by default */
   margin-bottom: 20px;
   text-decoration: none;
-  /* Adjust styling as needed for individual cards */
 }
 .product-card .SampleImg{
-  width: 280px;
+  width: 100%;
   height: 270px;
   margin-bottom: 21px;
 }
@@ -59,7 +59,6 @@
   width: 95.79px;
   height: 15px;
   flex-shrink: 0;
-  padding-right: 22px;
 }
 .product-card h4{
   color: var(--Dark-Grey---Fashion, #323232);
