--- a/src/components/LandingPage/Testimonial/Testimonials.css
+++ b/src/components/LandingPage/Testimonial/Testimonials.css
@@ -1,40 +1,53 @@
 .testimonials {
     text-align: center;
-    padding: 50px 0;
+    /* padding: 50px 0; */
+height: 612.5px;
+flex-shrink: 0;
   }
   
   .testimonials h2 {
-    font-size: 2rem;
-    margin-bottom: 0.5rem;
+    color: #484848;
+
+text-align: center;
+font-size: 33.542px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
   }
   
   .testimonials p {
-    font-size: 1rem;
-    color: #666;
-    margin-bottom: 2rem;
+    color: #8A8A8A;
+text-align: center;
+font-family: Poppins;
+font-size: 11.667px;
+font-style: normal;
+font-weight: 400;
+line-height: 18.958px; /* 162.5% */
   }
   
   .testimonial-container {
     display: flex;
     justify-content: center;
     align-items: center;
+    
   }
   
   .testimonial {
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 1rem;
-    width: 300px;
-    max-width: 300px;
+    width: 630px;
+height: 291.667px;
+flex-shrink: 0;
+    border-radius: 7.292px;
+    background: var(--White, #FFF);
+    box-shadow: 0px 14.583px 43.75px 0px rgba(46, 33, 61, 0.08);
   }
   
   .testimonial-image {
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    object-fit: cover;
-    margin-bottom: 1rem;
+    width: 176.458px;
+height: 176.458px;
+flex-shrink: 0;
+width: 176.458px;
+height: 176.458px;
+flex-shrink: 0;
   }
   
   .testimonial-text {
