--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,7 +7,7 @@ header {
   background: var(--White, #fff);
   width: 100%;
 }
-.logo img {
+header .logo img {
   width: 86px;
   height: 20px;
   flex-shrink: 0;
