--- a/src/components/Delivery/Delivery.css
+++ b/src/components/Delivery/Delivery.css
@@ -7,7 +7,7 @@
     gap: 80px;
     align-self: stretch;
     width: 100%;
-    padding: 72px 32px 0;
+    padding: 72px 32px;
   }
   .delivery .DeliveryComp {
     display: flex;
