--- a/src/components/Delivery/Delivery.css
+++ b/src/components/Delivery/Delivery.css
@@ -1,7 +1,7 @@
 
 .delivery {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
     gap: 80px;
@@ -11,9 +11,9 @@
   }
   .delivery .DeliveryComp {
     display: flex;
+    flex-direction: row;
+    align-items: flex-end;
     padding: 3px 57.505px 3px 0px;
-    align-items: center;
-    gap: 15px;
   }
   .delivery img {
     width: 60px;
