--- a/src/pages/ShopPage/CategoryProductsPage.css
+++ b/src/pages/ShopPage/CategoryProductsPage.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 116.667px;
   flex-shrink: 0;
+  position: relative;
 }
 .category .search input {
   display: inline-flex;
@@ -11,10 +12,11 @@
   background: #f4f4f4;
 }
 .searchIcon{
-  
+  position: absolute;
 }
 
 .category h3 {
   margin-top: 20px;
   margin-bottom: 65px;
 }
+
