--- a/src/pages/ProductDetails/ProductDetails.css
+++ b/src/pages/ProductDetails/ProductDetails.css
@@ -2,6 +2,7 @@
     display: flex;
     padding: 72px 32px;
     align-items: center;
+flex-wrap: wrap;
 }
 .ProductDetails{
     margin-left: 10px;
