--- a/src/components/Delivery/Delivery.css
+++ b/src/components/Delivery/Delivery.css
@@ -13,16 +13,17 @@
     display: flex;
     flex-direction: row;
     align-items: flex-end;
-    padding: 3px 57.505px 3px 0px;
+    /* padding: 3px 57.505px 3px 0px; */
   }
   .delivery img {
+    margin-right: 8px;
     width: 60px;
     height: 60px;
   }
   .delivery h2 {
     color: var(--Black, #000);
     font-size: 24px;
-    font-style: var();
+    font-style: var(--font-style-normal);
     font-weight: var(--font-weight-700);
     line-height: normal;
   }
@@ -33,4 +34,19 @@
     font-weight: var(--font-weight-400);
     line-height: normal;
   }
-  
+  @media screen and (max-width: 768px) {
+
+    /* .delivery {
+      justify-content: space-evenly;
+    } */
+    .delivery img {
+      width: 40px;
+      height: 40px;
+    }
+    .delivery h2 {
+      font-size: 18px;
+    }
+    .delivery p {
+      font-size: 14px;
+    }
+  }
