--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -1,4 +1,3 @@
-/* styling for hero section */
 .hero-section {
   background: linear-gradient(
       0deg,
@@ -17,12 +16,13 @@
   flex-shrink: 0;
   align-self: stretch;
 }
-/* styling for paragraphs in hero section */
+
 .hero-section p {
   width: 632px;
   font-style: var(--font-style-normal);
   color: var(--White, #fff);
 }
+
 .hero-section p:nth-of-type(1) {
   font-size: 32px;
   font-weight: var(--font-weight-700);
@@ -30,19 +30,21 @@
   letter-spacing: 0.157px;
   text-transform: capitalize;
 }
+
 .hero-section p:nth-of-type(2) {
   font-size: 78px;
   font-weight: var(--font-weight-700);
   line-height: 93.622px; /* 120.028% */
   letter-spacing: 0.315px;
 }
+
 .hero-section p:nth-of-type(3) {
   font-size: 32px;
   font-weight: var(--font-weight-400);
   line-height: 47.214px; /* 147.544% */
   letter-spacing: 0.315px;
 }
-/* styling for button in hero section */
+
 .hero-section button {
   display: inline-flex;
   padding: 16px 72px;
@@ -53,6 +55,7 @@
   background: var(--White, #fff);
   border: none;
 }
+
 .hero-section button a {
   color: #3c4242;
   text-align: center;
@@ -61,32 +64,35 @@
   line-height: normal;
   text-decoration: none;
 }
+
 .hero-section button a:hover,
 .hero-section button a:active {
   text-decoration: underline;
 }
+
 @media (max-width: 768px) {
   .hero-section {
+    /* height: auto;  */
     height: 374.784px;
     padding: 53.248px 65.536px;
   }
   .hero-section p {
-    width: 297.47px;
+    width: auto; /* Adjust based on content needs */
   }
   .hero-section p:nth-of-type(1) {
-    line-height: 17.778px; /* 118.035% */
-    letter-spacing: 0.074px;
     font-size: 15.062px;
+    line-height: 17.778px;
+    letter-spacing: 0.074px;
   }
   .hero-section p:nth-of-type(2) {
-    line-height: 44.066px; /* 120.028% */
-    letter-spacing: 0.148px;
     font-size: 36.713px;
+    line-height: 44.066px;
+    letter-spacing: 0.148px;
   }
   .hero-section p:nth-of-type(3) {
-    line-height: 22.223px; /* 147.544% */
-    letter-spacing: 0.148px;
     font-size: 15.062px;
+    line-height: 22.223px;
+    letter-spacing: 0.148px;
   }
   .hero-section button {
     padding: 7.531px 33.889px;
@@ -98,27 +104,29 @@
     font-size: 11.296px;
   }
 }
+
 @media (max-width: 452px) {
   .hero-section {
-    height: 183px;
+    height: auto;
+    /* height: 183px; */
     padding: 26px 32px;
   }
   .hero-section p {
-    width: 145.249px;
+    width: auto; /* Adjust based on content needs */
   }
   .hero-section p:nth-of-type(1) {
     font-size: 7.354px;
-    line-height: 8.681px; /* 118.035% */
+    line-height: 8.681px;
     letter-spacing: 0.036px;
   }
   .hero-section p:nth-of-type(2) {
     font-size: 17.926px;
-    line-height: 21.517px; /* 120.028% */
+    line-height: 21.517px;
     letter-spacing: 0.072px;
   }
   .hero-section p:nth-of-type(3) {
     font-size: 7.354px;
-    line-height: 10.851px; /* 147.544% */
+    line-height: 10.851px;
     letter-spacing: 0.072px;
   }
   .hero-section button {
